[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Characters/anthony_toasted.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/raiden_toasted.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/intan_toasted.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/ainun_toasted.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/Poppins-Black.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Music/game-over.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Music/UI-confirm.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[node name="GameOver" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.840881
margin_bottom = 0.840881
color = Color( 0.329412, 0.141176, 0.215686, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ainun_toasted" type="Sprite" parent="."]
position = Vector2( -486.478, -46.3268 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
offset = Vector2( 400.599, 102.602 )

[node name="anthony_toasted" type="Sprite" parent="."]
position = Vector2( 191.949, 153.833 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="intan_toasted" type="Sprite" parent="."]
position = Vector2( 75.9055, 170.651 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="raiden_toasted" type="Sprite" parent="."]
position = Vector2( 427.133, 166.367 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="YouWin" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -191.391
margin_top = -209.49
margin_right = 189.609
margin_bottom = -118.49
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.807843, 0.482353, 0.482353, 1 )
text = "GAME OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -112.381
margin_right = 75.0
margin_bottom = -70.381
text = "Menu"

[node name="Transition" parent="." instance=ExtResource( 8 )]

[node name="LoseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0
autoplay = true

[node name="ConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="Transition/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Transition"]
